--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,11 @@
     />
     <script
       type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtiRJ1k_i6Rbigau8sQyZq2tqxzxM-jdM&libraries=places"
     ></script>
-    <title>FoodHub</title>
+    <!-- Just up before 'YOUR_GOOGLE_API_KEY' is replaced by the google api key -->
+    <title>NomadEats</title>
+    <!-- Above is the title of the site -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
